<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f0eb"
    android:orientation="vertical"
    tools:context=".DrinkDetailActivity">

    <ImageView
        android:id="@+id/drinkImage"
        android:layout_marginTop="10dp"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/espresso_bg"
        android:adjustViewBounds="true"
        android:contentDescription="@string/drinkimage"
        />

    <TextView
        android:id="@+id/drinkName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-48dp"
        android:gravity="center"
        android:text="@string/placeholder_text"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:lines="2"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        />

    <ImageView
        android:id="@+id/drinkInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:src="@drawable/espresso_instructions"
        android:contentDescription="@string/drinkinstructions"
        >
    </ImageView>

</LinearLayout>