<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f0eb"
    android:orientation="vertical"
    tools:context=".ShelfLifeStandardsDetailActivity">

    <ImageView
        android:id="@+id/shelfItemImage"
        android:layout_marginTop="10dp"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/coffee_and_tea"
        android:adjustViewBounds="true"
        android:contentDescription="@string/shelfitemimage"
        />

    <TextView
        android:id="@+id/shelfItemName"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/placeholder_text"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:lines="2"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        />

    <ImageView
        android:id="@+id/shelfItemDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:src="@drawable/coffee_and_tea_details"
        android:contentDescription="@string/shelfitemdetails"
        >
    </ImageView>

</LinearLayout>